<resources>
    <string name="app_name">NanoDegreeProjectZero</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_Streamer">Spotify Streamer</string>
    <string name="Scores_App">Scores App</string>
    <string name="Library_App">Library App</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="The_End_My_App">The End - My App</string>
    <string name="Application_Launcher">Application Launcher</string>
    <string name="App_Is_Not_Built_Yet">%1$s is not built yet</string>
    <string name="This_Will_Launch_App_When_Built">This Will Launch %1$s (When built!)</string>

</resources>
