<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/MainLayout"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Application_Launcher"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Spotify_Streamer"
            android:id="@+id/button"
            style="@style/LauncherButton" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/LauncherButtonRed"
            android:text="@string/Scores_App"
            android:id="@+id/button2" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/LauncherButtonRed"
            android:text="@string/Library_App"
            android:id="@+id/button3" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/LauncherButtonRed"
            android:text="@string/Build_It_Bigger"
            android:id="@+id/button4" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/LauncherButtonRed"
            android:text="@string/XYZ_Reader"
            android:id="@+id/button5" />




        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/LauncherButtonRed"
            android:text="@string/The_End_My_App"
            android:id="@+id/button6" />



    </LinearLayout>

</RelativeLayout>
